-- CREATE TABLE users (
--     id INTEGER PRIMARY KEY AUTOINCREMENT,
--     username TEXT NOT NULL,
--     password TEXT NOT NULL,
--     token TEXT,
--     first_name TEXT,
--     last_name TEXT,
--     date_of_birth TEXT,
--     email TEXT,
--     phone_number TEXT
-- );