syntax = "proto3";

import "google/protobuf/timestamp.proto";

service TaskManager { 
   rpc CreateTask(Task) returns (TaskResponse) {}
   rpc UpdateTask(Task) returns (TaskResponse) {}
   rpc DeleteTask(TaskShort) returns (TaskResponse) {} // need user_id to identify user
   rpc GetTasks(Pagination) returns (Tasks) {} // if user_id is not null - only his tasks
   rpc GetTaskById(TaskShort) returns (Task) {}
}

message Task {
    uint64 userId = 1;
    string content = 2;
    google.protobuf.Timestamp dateOfCreation = 3;
    google.protobuf.Timestamp deadline = 4;
    uint64 status = 5;
    uint64 id = 6;
}

message Tasks {
    repeated Task tasks = 1;
}

message TaskShort {
    uint64 id = 1;
    uint64 userId = 2;
}

message Pagination {
    uint64 offset = 1;
    uint64 size = 2;
    uint64 userId = 3;
}

message TaskResponse {
    uint64 id = 1;
    string status = 2;
}