@startuml

entity "User" as user {
  *id : size_t
  --
  *username(login) : text
  *password : text
  *first_name : text
  *last_name : text
  *email : text
  *phone_number : text
  *date_of_birth: timestamp
}

entity "Task" as task {
  *id : size_t
  --
  *user_id : size_t
  *content : text
  *date_of_creation : timestamp
  *deadline: timestamp
  *status: size_t
}

entity "Comment" as comment {
  *id : size_t
  --
  *task_id : size_t
  *user_id : size_t
  *content : text
  *date_of_last_update: timestamp
  *status: size_t
}

entity "Statisitics" as stat {
  *task_id : size_t
  --
  *views : size_t
  *likes : size_t
}


user ||--o{ task
task -- stat
task ||--o{ comment
user ||--o{ comment

@enduml